manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "myakscluster-d7f0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "myakscluster-d7f0"
  template:
    metadata:
      labels:
        app: "myakscluster-d7f0"
    spec:
      containers:
        - name: "myakscluster-d7f0"
          image: "workshop7reg.azurecr.io/myakscluster"
          ports:
          - containerPort: 80
