manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "myakscluster-d7f0"
    labels:
        app: "myakscluster-d7f0"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: namespace-workflow-1680169929926-myakscluster-d7f0.dd6aa5b62889420bb133.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "myakscluster-d7f0"
                servicePort: 80
